# Spectral-Simulator

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
config/examples/: overdetermined.yaml  underdetermined.yaml
saved_data/datasets/: dataset_L4K4_128x128_20250903_215020.npz
spectral_playground/: __init__.py
spectral_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spectral_playground/core/: background.py  geometry.py  noise.py  simulate.py  spatial.py  spectra.py
spectral_playground/core/statistics/: __init__.py  distributions.py  empirical.py  theory.py
spectral_playground/data/: dataset.py  image_io.py  io.py
spectral_playground/eval/: metrics.py
spectral_playground/experiments/: registry.py  run.py
spectral_playground/gui/: app.py  app_improved.py  bottom_panel.py  channel_manager.py  data_manager.py  fluorophore_editor.py  main_gui.py  object_layers.py  object_templates.py  settings_panels.py  sidebar.py  state.py  viewer.py
spectral_playground/gui/objects/: __init__.py  composition.py  composition_editor.py  dialogs.py  manager.py  object_editor.py  presets.py  ui_components.py  utils.py
spectral_playground/gui/views/: __init__.py  abundance.py  composite.py  inspector.py  output.py  quick_inspector.py  spectral.py  statistics_view.py  statistics_view.py.backup  utils.py
spectral_playground/tests/: test_core_basic.py  test_end2end.py  test_unmix_linear.py
spectral_playground/unmix/: base.py  em.py  linear.py  nmf.py
spectral_playground/vis/: plots.py
(+35 files in other folders)
