[project]
name = "spectral_playground"
version = "0.2.0"
description = "Spectral Visualization Playground"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Anton Victorin" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectral_playground*"]
exclude = ["config*"]
